Do not consider last pixel to be part of panel containment view

This mirrors positionAdjustedForContainment, which also assumes that the
very last pixel of the containment, (x + width, y + height), will not be
able to handle the events.

BUG:483808